# Recsys

./: .gitignore  feature_store.yaml  pyproject.toml
data/: registry.db
notebooks/: 1_computing_features.ipynb
recsys/: __init__.py  config.py
recsys/features/: articles.py  customers.py  interaction.py  transactions.py
recsys/mlflow_integration/: constants.py  feature_store.py
recsys/raw_data_sources/: h_and_m.py
