[project]
name = "recsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.26.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sentence-transformers>=3.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = ["recsys"]  # Chỉ định package cần cài đặt
